FBINTF Change Log  version          (1.4-1 Build 14019) Sat, 05 Aug 2023 13:21:51 +0100

1. FBSQLData: ensure that TResults.getSQLData and TResults.GetData use same error
   checks for range checking.

2. FB25Client: In GetIBMessage, fb_interpret is now called multiple times such that
   any additional error information is decoded.

FBINTF Change Log  version          (1.4-0 Build 14011) Sat, 05 Aug 2023 11:09:09 +0100

1. Support package fbudr added for support of User Defined Routines (UDRs), and package
   fbudrtestbed for client side debugging of UDR libraries.

2. Package layout changed with introduction of udr support. IB*.pas files moved from
    root directory to "client". IBHeader moved to "Client".

3. Delphi packages: all packages now compile .dcp and .bpi files to either
   fbintf\Win32\Debug or fbintf\Win64\Debug by default. Please remove any pre-existing
   fbintf.dcp and fbintf.bpi files from other locations.

4. Client side journaling support added. Interface changes
   IAttachment
    function JournalingActive: boolean;
    function GetJournalOptions: TJournalOptions;
    function StartJournaling(aJournalLogFile: AnsiString): integer; overload;
    function StartJournaling(aJournalLogFile: AnsiString; Options: TJournalOptions): integer; overload;
    function StartJournaling(S: TStream; Options: TJournalOptions): integer; overload;
    procedure StopJournaling(RetainJournal: boolean);

5. Transactions may now be given a local transaction name:
   IFirebirdAPI
     function StartTransaction(Attachments: array of IAttachment;
             TPB: array of byte; DefaultCompletion: TTransactionCompletion=taCommit): ITransaction; overload;
             TPB: array of byte; DefaultCompletion: TTransactionCompletion=taCommit;
             aName: AnsiString=''): ITransaction; overload;
     function StartTransaction(Attachments: array of IAttachment;
             TPB: ITPB; DefaultCompletion: TTransactionCompletion=taCommit): ITransaction; overload;