@@ -662,6 +662,25 @@ begin
     Result := -999; {generic SQL Code}
 end;
 
+{$IFDEF WINDOWS}
+{$I 'include/lazutf8.inc'}
+
+function ValidUTF8(s: AnsiString): boolean;
+begin
+  Result := FindInvalidUTF8Codepoint(s,length(s),true) = -1;
+end;
+
+function ConvertFromDefaultCodePageIfNeeded(s: AnsiString): RawByteString;
+begin
+  Result := s;
+  if not ValidUTF8(Result) then
+  begin
+    SetCodePage(Result,cp_acp,false); {assume default system code page encoding}
+    Result := AnsiToUtf8(Result);
+  end;
+end;
+{$ENDIF}
+
 function TFBStatus.GetMessage: AnsiString;
 var IBDataBaseErrorMessages: TIBDataBaseErrorMessages;
 begin
@@ -684,7 +703,12 @@ begin
   begin
     if Result <> FPrefix then
       Result := Result + LineEnding;
-    Result := Result + 'Engine Code: ' + IntToStr(GetIBErrorCode) + LineEnding + GetIBMessage;
+    Result := Result + 'Engine Code: ' + IntToStr(GetIBErrorCode) + LineEnding
+    {$IFDEF WINDOWS}
+       + ConvertFromDefaultCodePageIfNeeded(GetIBMessage);
+    {$ELSE}
+       + GetIBMessage;
+    {$ENDIF}
   end;
   if (Result <> '') and (Result[Length(Result)] = '.') then
     Delete(Result, Length(Result), 1);
