@@ -6,6 +6,9 @@ FBINTF Change Log  version          (1.4-1 Build 14019) Sat, 05 Aug 2023 13:21:5
 2. FB25Client: In GetIBMessage, fb_interpret is now called multiple times such that
    any additional error information is decoded.
 
+3. FBClient: Windows only: In GetMessage, if error message is not UTF8 then assume
+   string is encoded using local default code page and convert to UTF.
+
 FBINTF Change Log  version          (1.4-0 Build 14011) Sat, 05 Aug 2023 11:09:09 +0100
 
 1. Support package fbudr added for support of User Defined Routines (UDRs), and package
